<resources>
    <string name="app_name">Aggone</string>
    <string name="facebook_app_id" translatable="false">663837754412852</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb663837754412852</string>
    <string name="splash_name">AGGONE</string>
    <string name="splash_desc">Reveal your potential Revolutionize your sport</string>
    <string name="modify_profile">Modify Profile</string>
    <string name="change_password">Change Password</string>
    <string name="my_subscription">My Subscriptions</string>
    <string name="my_subscribers">My Subscribers</string>
    <string name="recorded">Recorded</string>
    <string name="blocked_user">Blocked User</string>
    <string name="terms_conditions">Conditions of use</string>
    <string name="contact_us">Contact Us</string>
    <string name="sign_out">Sign out</string>
    <string name="block">Block</string>
    <string name="report">Report</string>
    <string name="skill1">Physical</string>
    <string name="skill2">Technical</string>
    <string name="skill3">Psychological</string>
    <string name="skill4">Tactical</string>
    <string name="cskill1">Knowledge</string>
    <string name="cskill2">Technical</string>
    <string name="cskill3">Managerial</string>
    <string name="cskill4">Qualities</string>
    <string name="notification_follow">This person followed you</string>
    <string name="notification_like">This person liked your video</string>
    <string name="notification_chat">This person sent a message to you</string>
    <string name="football">Football</string>
    <string name="basketball">Basket Ball</string>
    <string name="american_football">Am Football</string>
    <string name="cricket">Cricket</string>
    <string name="tennis">Tennis</string>
    <string name="rugby">Rugby</string>
    <string name="golf">Golf</string>
    <string name="baseball">BaseBall</string>
    <string name="ice_hockey">Ice Hockey</string>
    <string name="field_hockey">Field Hockey</string>
    <string name="volleyball">Volley Ball</string>
    <string name="handball">Handball</string>
    <string name="badminton">Badminton</string>
    <string name="squash">Squash</string>
    <string name="table_tennis">Table Tennis</string>
    <string name="boxing">Boxing</string>
    <string name="martial_art">Martial Art</string>
    <string name="mma">MMA</string>
    <string name="kick_boxing">Kick Boxing</string>
    <string name="wrestling">Wrestling</string>
    <string name="gymnastic">Gymnastic</string>
    <string name="athletics">Athletics</string>
    <string name="fencing">Fencing</string>
    <string name="judo">Judo</string>
    <string name="swimming">Swimming</string>
    <string name="water_sports">Water Sports</string>
    <string name="water_polo">Water Polo</string>
    <string name="auto_racing">Auto Racing</string>
    <string name="moto_racing">Moto Racing</string>
    <string name="cycling">Cycling</string>
    <string name="equestrianism">Equestrianism</string>
    <string name="polo_sport">Polo Sport</string>
    <string name="dance">Dance</string>
    <string name="softball">Softball</string>
    <string name="sepak_takraw">Sepak Takraw</string>
    <string name="korfball">Korfball</string>
    <string name="floorball">Floorball</string>
    <string name="climbing">Climbing</string>
    <string name="mountaineering">Mountaineering</string>
    <string name="canyoning">Canyoning</string>
    <string name="trail">Trail</string>
    <string name="triathlon">Triathlon</string>
    <string name="archery" translatable="false">Archery</string>
    <string name="snowboarding">Snowboarding</string>
    <string name="skiing">Skiing</string>
    <string name="ice_skating">Ice Skating</string>
    <string name="petanque">Petanque</string>
    <string name="skate_board">Skate Board</string>
    <string name="weightlifting">Weightlifting</string>
    <string name="crossfit_fitness">Crossfit&amp;Fitness</string>
    <string name="surf">Surf</string>
    <string name="sailing">Sailing</string>
    <string name="canoeing">Canoeing</string>
    <string name="rowing">Rowing</string>
    <string name="air_sports">Air Sports</string>
    <string name="winter_sports">Winter Sports</string>
    <string name="bowling">Bowling</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="full_name">Fullname</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="nationality">Nationality</string>
    <string name="gender">Gender</string>
    <string name="you_are_here">Looking For:</string>
    <string name="as_player">As Player</string>
    <string name="as_coach">As Coach</string>
    <string name="confirm_password">Confirm Your Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="terms_text">Agree to our terms and conditions</string>
    <string name="home">Home</string>
    <string name="lookup">Look Up</string>
    <string name="stats">Stats</string>
    <string name="chats">Chats</string>
    <string name="search_hint">Search for...</string>
    <string name="select_sport">Select Sport</string>
    <string name="world">World</string>
    <string name="my">My</string>
    <string name="views">Views</string>
    <string name="stars">Stars</string>
    <string name="bookmark">Bookmark</string>
    <string name="posted" translatable="false">Posted :</string>
    <string name="world_news">World News Feed</string>
    <string name="my_news">My News Feed</string>
    <string name="news">NEWS</string>
    <string name="the_filter">The Filter</string>
    <string name="the_filter_description">Advanced Searching</string>
    <string name="create_ad">Create an Ad</string>
    <string name="create_ad_description">Let the world know about your requirement</string>
    <string name="looking_club">Looking for Club</string>
    <string name="looking_club_description">I\'m looking for a club</string>
    <string name="looking_player">Looking for Player</string>
    <string name="looking_player_description">I\'m looking for a player</string>
    <string name="sport">Sport</string>
    <string name="city">City</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="search">Search</string>
    <string name="reset">Reset</string>
    <string name="send">Send</string>
    <string name="position">Position</string>
    <string name="description">Description</string>
    <string name="follow">Subscribe</string>
    <string name="unfollow">Unfollow</string>
    <string name="following">Unsubscribe</string>
    <string name="profile">Profile</string>
    <string name="access">Assess</string>
    <string name="player">Player</string>
    <string name="coach">Coach</string>
    <string name="team_club">Team/Club</string>
    <string name="agent">Agent</string>
    <string name="staff">Staff</string>
    <string name="company">Company</string>
    <string name="company_desc">Brand/Sponsor/Media...</string>
    <string name="club">Club</string>
    <string name="category">Category</string>
    <string name="videos">Videos</string>
    <string name="prizes">Prizes</string>
    <string name="career">Career</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_description">Edit Description</string>
    <string name="change_photo">Change Photo</string>
    <string name="activity">Activity</string>
    <string name="contract">Contract</string>
    <string name="apply">Apply</string>
    <string name="discard">Discard</string>
    <string name="subscribed">Subscribed</string>
    <string name="subscribe_back">Subscribe Back</string>
    <string name="blocked">Blocked</string>
    <string name="unblock">Unblock</string>
    <string name="pref_indicator">Perf indicator</string>
    <string name="edit_stats">Edit Stats</string>
    <string name="advanced_stats">Advanced Stats</string>
    <string name="add_stats">Add Stats</string>
    <string name="statistics">Statistics</string>
    <string name="graphs">Graphs</string>
    <string name="match">Match</string>
    <string name="match_win_percent">Match Win %</string>
    <string name="game_played">Game Played</string>
    <string name="ratio">Ratio</string>
    <string name="club_name">Club Name</string>
    <string name="total">Total</string>
    <string name="message">Message</string>
    <string name="notification">Notification</string>
    <string name="chat_hint">Type a message here ...</string>
    <string name="add">Add</string>
    <string name="upload_video">Upload A Video</string>
    <string name="upload_video_description">You can upload video directly or via youtube URL</string>
    <string name="add_more_prize">Add More Prizes</string>
    <string name="add_more_prize_description">You can add legit prizes that you received through out your career</string>
    <string name="career_roadmap">Career Roadmap</string>
    <string name="career_roadmap_description">You can add all the clubs and special events that you want to show the world.</string>
    <string name="add_description">Add Description</string>
    <string name="add_description_description">This is a great way to show case yourself as a player</string>
    <string name="delete_message">Are you sure you want to delete this?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="remove_description" translatable="false">If you made any mistake you can remove via here</string>
    <string name="upload">Upload</string>
    <string name="url">YouTube Link</string>
    <string name="title">Title</string>
    <string name="source">Source</string>
    <string name="select_icon">Select Icon</string>
    <string name="tournament" translatable="false">Tournament</string>
    <string name="location">Location</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="to_description">(leave this if your presently on this club)</string>
    <string name="logo_description">Add all relevant images here</string>
    <string name="submit">Submit</string>
    <string name="performance">Performance</string>
    <string name="description_1">"Speed"</string>
    <string name="description_2">"Strength"</string>
    <string name="description_3">"Explosivity"</string>
    <string name="description_4">"Acceleration"</string>
    <string name="description_5">"Stamina"</string>
    <string name="description_6">"Coordination"</string>
    <string name="description_7">"Strike force"</string>
    <string name="description_8">"Control"</string>
    <string name="description_9">"Defensive"</string>
    <string name="description_10">"Offensive"</string>
    <string name="description_11">"Precision"</string>
    <string name="description_12">"Finishing"</string>
    <string name="description_13">"Motivation"</string>
    <string name="description_14">"Concentration"</string>
    <string name="description_15">"Reflection"</string>
    <string name="description_16">"Adaptation"</string>
    <string name="description_17">"Mental"</string>
    <string name="description_18">"Communication"</string>
    <string name="description_19">"Game Intelligence"</string>
    <string name="description_20">"Team Spirit"</string>
    <string name="description_21">"Creativity"</string>
    <string name="advertisment">Ad</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="btn_confirm">Confirm</string>
    <string name="stories">Stories</string>
</resources>