<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_modify_profile"
        android:title="@string/modify_profile" />
    <item
        android:id="@+id/menu_change_password"
        android:title="@string/change_password" />
    <item
        android:id="@+id/menu_my_subscription"
        android:title="@string/my_subscription" />
    <item
        android:id="@+id/menu_my_subscribers"
        android:title="@string/my_subscribers" />
    <item
        android:id="@+id/menu_recorded"
        android:title="@string/recorded" />
    <item
        android:id="@+id/menu_advertisment"
        android:title="@string/advertisment" />
    <item
        android:id="@+id/menu_blocked_user"
        android:title="@string/blocked_user" />
    <item
        android:id="@+id/menu_terms_conditions"
        android:title="@string/terms_conditions" />
    <item
        android:id="@+id/menu_contact_us"
        android:title="@string/contact_us" />

    <item
        android:id="@+id/menu_sign_out"
        android:title="@string/sign_out" />
</menu>