<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="330dp"
    android:layout_height="wrap_content"
    android:background="@drawable/while_12">
    <ImageView
        android:id="@+id/btn_close"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:src="@mipmap/dialog_close"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:textColor="#404040"
        android:textSize="17dp"
        android:textStyle="bold"
        android:text="@string/career"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#404040"
            android:textSize="13dp"
            android:text="@string/club_name"/>
        <EditText
            android:id="@+id/edit_club"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:paddingHorizontal="10dp"
            android:textSize="14dp"
            android:textColor="#404040"
            android:inputType="text"
            android:background="@drawable/gray_9"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#404040"
            android:layout_marginTop="15dp"
            android:textSize="13dp"
            android:text="@string/sport"/>
        <EditText
            android:id="@+id/edit_sport"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:paddingHorizontal="10dp"
            android:textSize="14dp"
            android:textColor="#404040"
            android:inputType="text"
            android:background="@drawable/gray_9"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#404040"
            android:layout_marginTop="15dp"
            android:textSize="13dp"
            android:text="@string/from"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/edit_day"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:paddingHorizontal="10dp"
                    android:textSize="14dp"
                    android:hint="@string/day"
                    android:textColor="#404040"
                    android:inputType="number"
                    android:background="@drawable/gray_9"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/edit_month"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:paddingHorizontal="10dp"
                    android:textSize="14dp"
                    android:hint="@string/month"
                    android:textColor="#404040"
                    android:inputType="number"
                    android:background="@drawable/gray_9"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/edit_year"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:paddingHorizontal="10dp"
                    android:textSize="14dp"
                    android:hint="@string/year"
                    android:textColor="#404040"
                    android:inputType="number"
                    android:background="@drawable/gray_9"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#404040"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#404040"
                android:textSize="13dp"
                android:text="@string/to"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textColor="#404040"
                android:textSize="10dp"
                android:text="@string/to_description"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/edit_tday"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:paddingHorizontal="10dp"
                    android:textSize="14dp"
                    android:hint="@string/day"
                    android:textColor="#404040"
                    android:inputType="number"
                    android:background="@drawable/gray_9"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/edit_tmonth"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:paddingHorizontal="10dp"
                    android:textSize="14dp"
                    android:hint="@string/month"
                    android:textColor="#404040"
                    android:inputType="number"
                    android:background="@drawable/gray_9"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/edit_tyear"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:paddingHorizontal="10dp"
                    android:textSize="14dp"
                    android:hint="@string/year"
                    android:textColor="#404040"
                    android:inputType="number"
                    android:background="@drawable/gray_9"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="#404040"
            android:textSize="13dp"
            android:text="@string/position"/>
        <EditText
            android:id="@+id/edit_position"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:paddingHorizontal="10dp"
            android:textSize="14dp"
            android:textColor="#404040"
            android:inputType="text"
            android:background="@drawable/gray_9"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="#404040"
            android:textSize="13dp"
            android:text="@string/location"/>
        <EditText
            android:id="@+id/edit_location"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:paddingHorizontal="10dp"
            android:textSize="14dp"
            android:textColor="#404040"
            android:inputType="text"
            android:background="@drawable/gray_9"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="20dp"
                android:textColor="#404040"
                android:textSize="10dp"
                android:text="@string/logo_description"/>
            <Button
                android:id="@+id/btn_add_logo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:background="@mipmap/dialog_add_logo"/>
        </RelativeLayout>
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="10dp"
            android:textColor="#FFFFFF"
            android:text="@string/submit"
            android:textSize="18dp"
            android:textAllCaps="false"
            android:background="@drawable/main_button_active_4"/>
    </LinearLayout>
</RelativeLayout>