<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="330dp"
    android:layout_height="460dp"
    android:background="@drawable/while_12">
    <ImageView
        android:id="@+id/btn_close"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:src="@mipmap/dialog_close"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginLeft="20dp"
        android:textColor="#404040"
        android:textSize="17dp"
        android:textStyle="bold"
        android:text="@string/upload_video"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/btn_upload"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:text="@string/upload"
                android:textColor="#FFFFFF"
                android:textSize="14dp"
                android:textAllCaps="false"
                android:background="@drawable/main_button_active_4"/>
            <Button
                android:id="@+id/btn_url"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:text="@string/url"
                android:textColor="#83BE3D"
                android:textSize="14dp"
                android:textAllCaps="false"
                android:background="@drawable/main_button_normal_4"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColor="#404040"
            android:textSize="13dp"
            android:text="@string/title"/>
        <EditText
            android:id="@+id/edit_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:paddingHorizontal="10dp"
            android:textSize="14dp"
            android:textColor="#404040"
            android:inputType="text"
            android:background="@drawable/gray_9"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:textColor="#404040"
                    android:textSize="13sp"
                    android:text="@string/videos"/>
                <ImageView
                    android:id="@+id/btn_plus"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="15dp"
                    android:src="@mipmap/dialog_plus"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:textColor="#404040"
                    android:textSize="13sp"
                    android:text="@string/stories"/>
                <ImageView
                    android:id="@+id/btn_story"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="15dp"
                    android:src="@mipmap/dialog_story"/>
            </LinearLayout>

        </LinearLayout>
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="#FFFFFF"
            android:text="@string/submit"
            android:textSize="18dp"
            android:textAllCaps="false"
            android:background="@drawable/main_button_active_4"/>
    </LinearLayout>
</RelativeLayout>