<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/change_password_bg"
    tools:context=".Activity.Auth.ChangePassActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:src="@mipmap/back1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="#83BE3D"
            android:text="@string/change_password"/>
    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="32dp"
        android:layout_centerVertical="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/current_password"/>

        <EditText
            android:id="@+id/edit_curpass"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="8dp"
            android:background="@drawable/rounded_border_color"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:inputType="textPassword"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:text="@string/new_password"/>

        <EditText
            android:id="@+id/edit_newpass"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="8dp"
            android:background="@drawable/rounded_border_color"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:inputType="textPassword"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:text="@string/retype_password"/>

        <EditText
            android:id="@+id/edit_retypepass"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="8dp"
            android:background="@drawable/rounded_border_color"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:inputType="textPassword"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="32dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rounded_fill_color"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:text="@string/btn_confirm"/>
</RelativeLayout>